  * Fix an error in Matroska PTS calculation.
  * Some front ends hang due to the hang fixes in 1.1.16. Fix this by
    removing a break statement.
  * Enable libmpeg2new. This is not yet production code; the old mpeg2
    decoder remains the default.
  * Fix a broken size check in the pvr input plugin (ref. CVE-2008-5239).
  * More malloc checking (ref. CVE-2008-5240).

xine-lib (1.1.16.1) 2009-01-11
  * Fix build with older ffmpeg, both internal and in Debian 5.0.
  * Add version check for CACA library and disable CACA plugin if needed
  * Fix playback of some H.264 files (broken in 1.1.16).
  * Various other build & bug fixes.
  * Some FAQ list updates.

xine-lib (1.1.16) 2009-01-07
  * Security fixes:
    - Heap overflow in Quicktime atom parsing.                 (CVE-2008-5234)
    - Multiple buffer overflows.                               (CVE-2008-5236)
    - Multiple integer overflows.                              (CVE-2008-5237)
    - Unchecked or incompletely-checked read function results. (CVE-2008-5239)
    - Unchecked malloc using untrusted values.  (CVE-2008-5240, CVE-2008-5242)
    - Integer underflow in qt compressed atom handling.        (CVE-2008-5241)
    - Buffer indexing using untrusted or unchecked values.     (CVE-2008-5243)
    - Integer overflows in the ffmpeg audio decoder and the CDDA server.
    - Heap buffer overflow in the ffmpeg video decoder.
    - Avoid segfault on invalid track type in Matroska files.
    - Avoid underflow (compressed atoms) in the Qt demuxer.
  * Fix reported compilation failures (with C++ programs).
  * Fix CDDB access in 64-bit builds.
  * Fix seeking FLV clips that don't specify the movie length in the headers.
  * Support H.264 and AAC streams within FLV.
  * Fix timing issues (broken audio) on mingw.
  * Add ID3 tag TDRC to replace/complement the deprecated tag TYER.
  * Add a new meta-tag, "Composer", and use it in the FLAC demuxer.
  * Correct AAC channel ordering for multi-channel audio, at least for FLAC